[gd_scene load_steps=2 format=3 uid="uid://d3ddmigb7bp1n"]

[ext_resource type="Script" path="res://scenes/UI/main_menu/main_menu.gd" id="1_0ulh4"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_0ulh4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewGame" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Load" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Exit" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
